overlay/argo-events/development/resources-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-events-controller
  namespace: argo-events-dev
spec:
  type: ClusterIP
  ports:
  - name: metrics
    port: 8080
    targetPort: 8080
  - name: health
    port: 8081
    targetPort: 8081
